<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- workout_app strings -->

	<string name="app_name">other</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="powerhouse_string">PowerHouse</string>
	<string name="right_title_string">Right Title</string>
	<string name="login_string">Login</string>
	<string name="login_with_string">Login With</string>
	<string name="or_string">Or</string>
	<string name="e_mail_id__string">E-Mail ID:</string>
	<string name="abc_gmail_com_string">abc@gmail.com</string>
	<string name="password__string">Password:</string>
	<string name="new_to_the_app__or_sign_up_string">New to the app? or Sign Up</string>
	<string name="minimum_8_characters_string">Minimum 8 Characters</string>
	<string name="login_ek1_string">Login</string>
	<string name="right_title_ek1_string">Right Title</string>
	<string name="sign_up_string">Sign Up</string>
	<string name="or_ek1_string">Or</string>
	<string name="password__ek1_string">Password:</string>
	<string name="minimum_8_characters_ek1_string">Minimum 8 Characters</string>
	<string name="password__ek2_string">Password:</string>
	<string name="minimum_8_characters_ek2_string">Minimum 8 Characters</string>
	<string name="sign_up_ek1_string">Sign-up</string>
	<string name="right_title_ek2_string">Right Title</string>
	<string name="male_string">Male</string>
	<string name="male_ek1_string">Male</string>
	<string name="female_string">Female</string>
	<string name="non_binary_string">Non Binary</string>
	<string name="your_gender__string">Your Gender?</string>
	<string name="right_title_ek3_string">Right Title</string>
	<string name="done_string">DONE</string>
	<string name="what_do_we_call_you__string">What do we call you?</string>
	<string name="age_string">Age</string>
	<string name="height_string">Height</string>
	<string name="y_o_string">Y/O </string>
	<string name="inches_string">inches </string>
	<string name="fts_string">Fts</string>
	<string name="_19_string">19</string>
	<string name="your_name_here_string">Your name here</string>
	<string name="_2002_string">2002</string>
	<string name="_10_string">10</string>
	<string name="_23_string">23</string>
	<string name="_5_6_ft_string">5.6 ft </string>
	<string name="height_ek1_string">Height</string>
	<string name="inches_ek1_string">inches </string>
	<string name="fts_ek1_string">Fts</string>
	<string name="_5_6_ft_ek1_string">5.6 ft </string>
	<string name="right_title_ek4_string">Right Title</string>
	<string name="what_should_we_call_you__string">What should we call you?</string>
	<string name="your_name_here_ek1_string">Your name here</string>
	<string name="submit_string">SUBMIT</string>
	<string name="right_title_ek5_string">Right Title</string>
	<string name="male_ek2_string">Male</string>
	<string name="student_string">Student</string>
	<string name="working_professional_string">Working Professional</string>
	<string name="home_maker_string">Home Maker</string>
	<string name="what_do_you_do__string">What do you do?</string>
	<string name="right_title_ek6_string">Right Title</string>
	<string name="male_ek3_string">Male</string>
	<string name="yes_string">Yes</string>
	<string name="no_string">No</string>
	<string name="any_medical_condition__string">Any Medical Condition?</string>
	<string name="right_title_ek7_string">Right Title</string>
	<string name="male_ek4_string">Male</string>
	<string name="stay_lean_string">Stay Lean</string>
	<string name="gain_muscle_mass_string">Gain Muscle Mass</string>
	<string name="mental_health_string">Mental Health</string>
	<string name="saty_active_string">Saty Active</string>
	<string name="lose_fat_string">Lose Fat</string>
	<string name="what_s_your_goal__string">Whats your goal?</string>
	<string name="right_title_ek8_string">Right Title</string>
	<string name="male_ek5_string">Male</string>
	<string name="yoga_and_meditation_string">Yoga and Meditation</string>
	<string name="home_workout_string">Home Workout</string>
	<string name="zumba_string">Zumba</string>
	<string name="what_do_you_prefer__string">What do you prefer?</string>
	<string name="weight_training_and_cardio_string">Weight Training and Cardio</string>
	<string name="exercises_string">Exercises</string>
	<string name="running_string">Running</string>
	<string name="_10_00_mins_string">10.00 mins</string>
	<string name="warm_up_properly_before_exercising_to_prevent__injury_and_make_your_workouts_more_effective__string">Warm up properly before exercising to prevent injury and make your workouts more effective.</string>
	<string name="warm_up_string">Warm up</string>
	<string name="exercise_1_string">Exercise 1</string>
	<string name="_02_30_minutes_string">02.30 Minutes</string>
	<string name="exercise_1_ek1_string">Exercise 2</string>
	<string name="_02_30_minutes_ek1_string">02.00 Minutes</string>
	<string name="exercise_1_ek2_string">Exercise 3</string>
	<string name="_02_30_minutes_ek2_string">03.20 Minutes</string>
	<string name="exercise_1_ek3_string">Exercise 4</string>
	<string name="_02_30_minutes_ek3_string">02.30 Minutes</string>
	<string name="exercise_1_ek4_string">Exercise 5</string>
	<string name="_02_30_minutes_ek4_string">05.30 Minutes</string>
	<string name="exercise_1_ek5_string">Exercise 6</string>
	<string name="_02_30_minutes_ek5_string">06.10 Minutes</string>
	<string name="exercise_1_ek6_string">Exercise 7</string>
	<string name="_02_30_minutes_ek6_string">04.50 Minutes</string>
	<string name="exercise_1_ek7_string">Exercise 8</string>
	<string name="_02_30_minutes_ek7_string">03.30 Minutes</string>
	<string name="exercise_1_ek8_string">Exercise 9</string>
	<string name="_02_30_minutes_ek8_string">01.30 Minutes</string>
	<string name="exercise_1_ek9_string">Exercise 10</string>
	<string name="_02_30_minutes_ek9_string">05.20 Minutes</string>
	<string name="home_workout_ek1_string">Home Workout</string>
	<string name="your_workout_string">YOUR WORKOUT</string>
</resources>