<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		workout_app
	 *	@date 		1633797277325
	 *	@title 		other
	 *	@author
	 *	@keywords
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/question_height_weight"
		android:layout_width="wrap_content"
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >


			<RelativeLayout
				android:id="@+id/page_question_height_weight_ek1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:background="#0B0A0A">

				<View
					android:id="@+id/_bg__question_height_weight_ek2"
					android:layout_width="375dp"
					android:layout_height="812dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__question_height_weight_ek2_shape" />


				<RelativeLayout
					android:id="@+id/dark_mode_true_ek4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="0dp"
					android:layout_marginTop="778dp">

					<View
						android:id="@+id/home_indicator_ek4"
						android:layout_width="134dp"
						android:layout_height="5dp"
						android:layout_marginStart="121dp"
						android:layout_marginTop="21dp"
						android:background="@drawable/home_indicator_ek4_shape" />

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/group_1819_ek3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="0dp"
					android:layout_marginTop="44dp">


					<RelativeLayout
						android:id="@+id/__left__title__right_ek3"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp">


						<RelativeLayout
							android:id="@+id/right_accessory__text_bold__ek3"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="275dp"
							android:layout_marginTop="0dp">

							<TextView
								android:id="@+id/right_title_ek3"
								android:layout_width="96dp"
								android:layout_height="33.5dp"
								android:layout_gravity="center_vertical|end"
								android:layout_marginLeft="875dp"
								android:layout_marginTop="10dp"
								android:fontFamily="SF Pro Text"
								android:gravity="end"
								android:text="@string/right_title_ek3_string"
								android:textColor="@color/right_title_color"
								android:textSize="17sp"
								android:textStyle="bold" />


							<RelativeLayout
								android:id="@+id/icon___plus_ek3"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_marginStart="354dp"
								android:layout_marginTop="12dp">

								<ImageView
									android:id="@+id/icon_ek3"
									android:layout_width="17.47dp"
									android:layout_height="17.87dp"
									android:layout_marginStart="0dp"
									android:layout_marginTop="0dp"
									android:contentDescription="icon_ek3"
									android:src="@drawable/icon_ek3" />

							</RelativeLayout>

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/ic_arrowleft_ek3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="19dp"
					android:layout_marginTop="26dp">

					<ImageView
						android:id="@+id/vector_ek13"
						android:layout_width="25dp"
						android:layout_height="16dp"
						android:layout_marginStart="2dp"
						android:layout_marginTop="-9dp"
						android:contentDescription="vector_ek13"
						android:src="@drawable/vector_ek13" />

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/group_1825_ek2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="85dp"
					android:layout_marginTop="643dp">

					<Button
						android:id="@+id/rectangle_66_ek10"
						android:layout_width="205dp"
						android:layout_height="55dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/rectangle_66_ek10_shape"
						android:text="@string/done_string" />

					<TextView
						android:id="@+id/done"
						android:layout_width="119dp"
						android:layout_height="29dp"
						android:layout_gravity="center_horizontal|center"
						android:layout_marginLeft="45dp"
						android:layout_marginTop="19dp"
						android:fontFamily="Poppins"
						android:gravity="center"
						android:text="@string/done_string"
						android:textColor="@color/login_ek1_color"
						android:textSize="16sp"
						android:textStyle="bold" />

				</RelativeLayout>

				<TextView
					android:id="@+id/what_do_we_call_you_"
					android:layout_width="231dp"
					android:layout_height="32dp"
					android:layout_marginLeft="51dp"
					android:layout_marginTop="164dp"
					android:fontFamily="Poppins"
					android:text="@string/what_do_we_call_you__string"
					android:textColor="@color/home_indicator_color"
					android:textSize="20sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/age"
					android:layout_width="56dp"
					android:layout_height="32dp"
					android:layout_marginLeft="51dp"
					android:layout_marginTop="255dp"
					android:fontFamily="Poppins"
					android:text="@string/age_string"
					android:textColor="@color/home_indicator_color"
					android:textSize="20sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/height"
					android:layout_width="82dp"
					android:layout_height="32dp"
					android:layout_marginLeft="53dp"
					android:layout_marginTop="362dp"
					android:fontFamily="Poppins"
					android:text="@string/height_string"
					android:textColor="@color/home_indicator_color"
					android:textSize="20sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/y_o"
					android:layout_width="49dp"
					android:layout_height="31dp"
					android:layout_marginLeft="248dp"
					android:layout_marginTop="257dp"
					android:fontFamily="Poppins"
					android:text="@string/y_o_string"
					android:textColor="@color/home_indicator_color"
					android:textSize="18sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/inches"
					android:layout_width="75dp"
					android:layout_height="31dp"
					android:layout_marginLeft="218dp"
					android:layout_marginTop="362dp"
					android:fontFamily="Poppins"
					android:text="@string/inches_string"
					android:textColor="@color/home_indicator_color"
					android:textSize="18sp"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/fts"
					android:layout_width="39dp"
					android:layout_height="31dp"
					android:layout_marginLeft="286dp"
					android:layout_marginTop="362dp"
					android:fontFamily="Poppins"
					android:text="@string/fts_string"
					android:textColor="@color/home_indicator_color"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/_19"
					android:layout_width="31dp"
					android:layout_height="31dp"
					android:layout_marginLeft="291dp"
					android:layout_marginTop="257dp"
					android:fontFamily="Poppins"
					android:text="@string/_19_string"
					android:textColor="@color/home_indicator_color"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/your_name_here"
					android:layout_width="124dp"
					android:layout_height="28dp"
					android:layout_marginLeft="53dp"
					android:layout_marginTop="197dp"
					android:fontFamily="Poppins"
					android:text="@string/your_name_here_string"
					android:textColor="@color/home_indicator_color"
					android:textSize="14sp" />

				<ImageView
					android:id="@+id/line_2"
					android:layout_width="260dp"
					android:layout_height="0.48dp"
					android:layout_marginStart="51dp"
					android:layout_marginTop="225dp"
					android:contentDescription="line_2"
					android:src="@drawable/line_2" />

				<View
					android:id="@+id/rectangle_374"
					android:layout_width="260dp"
					android:layout_height="46dp"
					android:layout_marginStart="51dp"
					android:layout_marginTop="285dp"
					android:background="@drawable/rectangle_374_shape" />

				<View
					android:id="@+id/rectangle_379"
					android:layout_width="260dp"
					android:layout_height="46dp"
					android:layout_marginStart="54dp"
					android:layout_marginTop="393dp"
					android:background="@drawable/rectangle_379_shape" />

				<View
					android:id="@+id/rectangle_375"
					android:layout_width="254dp"
					android:layout_height="40dp"
					android:layout_marginStart="57dp"
					android:layout_marginTop="396dp"
					android:background="@drawable/rectangle_375_shape" />

				<View
					android:id="@+id/rectangle_380"
					android:layout_width="254dp"
					android:layout_height="40dp"
					android:layout_marginStart="54dp"
					android:layout_marginTop="288dp"
					android:background="@drawable/rectangle_380_shape" />

				<View
					android:id="@+id/rectangle_376"
					android:layout_width="239dp"
					android:layout_height="5dp"
					android:layout_marginStart="65dp"
					android:layout_marginTop="413dp"
					android:background="@drawable/rectangle_376_shape" />

				<View
					android:id="@+id/rectangle_378"
					android:layout_width="108dp"
					android:layout_height="5dp"
					android:layout_marginStart="56dp"
					android:layout_marginTop="413dp"
					android:background="@drawable/rectangle_378_shape" />

				<View
					android:id="@+id/rectangle_377"
					android:layout_width="52dp"
					android:layout_height="28dp"
					android:layout_marginStart="148dp"
					android:layout_marginTop="401dp"
					android:background="@drawable/rectangle_377_shape" />

				<ImageView
					android:id="@+id/line_4"
					android:layout_width="18.03dp"
					android:layout_height="0dp"
					android:layout_marginStart="137dp"
					android:layout_marginTop="308dp"
					android:contentDescription="line_4"
					android:src="@drawable/line_4" />

				<View
					android:id="@+id/line_5"
					android:layout_width="18.03dp"
					android:layout_height="1dp"
					android:layout_marginStart="207dp"
					android:layout_marginTop="308dp"
					android:background="@drawable/line_5_shape" />

				<TextView
					android:id="@+id/_2002"
					android:layout_width="58dp"
					android:layout_height="31dp"
					android:layout_marginLeft="243dp"
					android:layout_marginTop="299dp"
					android:fontFamily="Poppins"
					android:text="@string/_2002_string"
					android:textColor="@color/home_indicator_color"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/_10"
					android:layout_width="32dp"
					android:layout_height="31dp"
					android:layout_marginLeft="172dp"
					android:layout_marginTop="299dp"
					android:fontFamily="Poppins"
					android:text="@string/_10_string"
					android:textColor="@color/home_indicator_color"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/_23"
					android:layout_width="36dp"
					android:layout_height="31dp"
					android:layout_marginLeft="97dp"
					android:layout_marginTop="299dp"
					android:fontFamily="Poppins"
					android:text="@string/_23_string"
					android:textColor="@color/home_indicator_color"
					android:textSize="18sp" />

			</RelativeLayout>


			<TextView android:id="@+id/_5_6_ft"
				android:fontFamily="Poppins"
				android:textStyle="bold"
				android:textSize="16sp"
				android:textColor="@color/login_ek1_color"
				android:layout_marginLeft="-425dp"
				android:layout_marginTop="2201dp"
				android:layout_width="54dp"
				android:layout_height="29dp"
				android:text="@string/_5_6_ft_string"
				/>

			<TextView android:id="@+id/height_ek1"
				android:fontFamily="Poppins"
				android:textStyle="bold"
				android:textSize="20sp"
				android:textColor="@color/home_indicator_color"
				android:layout_marginLeft="-528dp"
				android:layout_marginTop="2264dp"
				android:layout_width="82dp"
				android:layout_height="32dp"
				android:text="@string/height_ek1_string"
				/>

			<TextView android:id="@+id/inches_ek1"
				android:fontFamily="Poppins"
				android:textStyle="bold"
				android:textSize="18sp"
				android:textColor="@color/home_indicator_color"
				android:layout_marginLeft="-363dp"
				android:layout_marginTop="2264dp"
				android:layout_width="75dp"
				android:layout_height="31dp"
				android:text="@string/inches_ek1_string"
				/>

			<TextView android:id="@+id/fts_ek1"
				android:fontFamily="Poppins"
				android:textSize="18sp"
				android:textColor="@color/home_indicator_color"
				android:layout_marginLeft="-295dp"
				android:layout_marginTop="2264dp"
				android:layout_width="39dp"
				android:layout_height="31dp"
				android:text="@string/fts_ek1_string"
				/>

			<View android:id="@+id/rectangle_379_ek1"
				android:background="@drawable/rectangle_379_ek1_shape"
				android:layout_marginStart="-527dp"
				android:layout_marginTop="2295dp"
				android:layout_width="260dp"
				android:layout_height="46dp" />

			<View android:id="@+id/rectangle_375_ek1"
				android:background="@drawable/rectangle_375_ek1_shape"
				android:layout_marginStart="-524dp"
				android:layout_marginTop="2298dp"
				android:layout_width="254dp"
				android:layout_height="40dp" />

			<View android:id="@+id/rectangle_376_ek1"
				android:background="@drawable/rectangle_376_ek1_shape"
				android:layout_marginStart="-516dp"
				android:layout_marginTop="2315dp"
				android:layout_width="239dp"
				android:layout_height="5dp" />

			<View android:id="@+id/rectangle_378_ek1"
				android:background="@drawable/rectangle_378_ek1_shape"
				android:layout_marginStart="-525dp"
				android:layout_marginTop="2315dp"
				android:layout_width="108dp"
				android:layout_height="5dp" />

			<View android:id="@+id/rectangle_377_ek1"
				android:background="@drawable/rectangle_377_ek1_shape"
				android:layout_marginStart="-433dp"
				android:layout_marginTop="2303dp"
				android:layout_width="52dp"
				android:layout_height="28dp" />

			<TextView android:id="@+id/_5_6_ft_ek1"
				android:fontFamily="Poppins"
				android:textStyle="bold"
				android:textSize="16sp"
				android:textColor="@color/login_ek1_color"
				android:layout_marginLeft="-427dp"
				android:layout_marginTop="2308dp"
				android:layout_width="54dp"
				android:layout_height="29dp"
				android:text="@string/_5_6_ft_ek1_string"
				/>

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>